[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/enxtur/waassaamm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
